--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImageListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="ImagLis">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -22,13 +22,60 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="sectionIndexBackgroundColor" name="YP Black"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="GjK-vi-SrM">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="52"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="259" id="GjK-vi-SrM" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="259"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GjK-vi-SrM" id="hOZ-ql-ha1">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="52"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GjK-vi-SrM" id="hOZ-ql-ha1">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="259"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Qk-Ci-kbK">
+                                                    <rect key="frame" x="20" y="0.0" width="353" height="244"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="15"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8M4-yx-oCE">
+                                                    <rect key="frame" x="28.000000000000007" y="220.33333333333334" width="101.66666666666669" height="15.666666666666657"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1dr-lq-zuC">
+                                                    <rect key="frame" x="329" y="0.0" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="Bgw-sd-RS7"/>
+                                                        <constraint firstAttribute="height" constant="44" id="scv-4v-nCe"/>
+                                                    </constraints>
+                                                    <color key="tintColor" red="0.1898008742" green="0.46281108659999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="gray" image="Active">
+                                                        <color key="baseForegroundColor" name="YP Red"/>
+                                                        <color key="baseBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </buttonConfiguration>
+                                                </button>
+                                            </subviews>
+                                            <color key="backgroundColor" name="YP Black"/>
+                                            <constraints>
+                                                <constraint firstItem="5Qk-Ci-kbK" firstAttribute="leading" secondItem="hOZ-ql-ha1" secondAttribute="leadingMargin" id="5Wk-a5-Fjr"/>
+                                                <constraint firstItem="1dr-lq-zuC" firstAttribute="trailing" secondItem="5Qk-Ci-kbK" secondAttribute="trailing" id="6Hc-St-N9f"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8M4-yx-oCE" secondAttribute="trailing" id="6aW-e1-gkv"/>
+                                                <constraint firstItem="8M4-yx-oCE" firstAttribute="leading" secondItem="5Qk-Ci-kbK" secondAttribute="leading" constant="8" id="E7q-hL-6Hx"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="5Qk-Ci-kbK" secondAttribute="bottom" id="S2e-k4-2bY"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="5Qk-Ci-kbK" secondAttribute="trailing" id="bVz-NE-GZ2"/>
+                                                <constraint firstItem="5Qk-Ci-kbK" firstAttribute="bottom" secondItem="8M4-yx-oCE" secondAttribute="bottom" constant="8" id="jYi-Qw-eZ4"/>
+                                                <constraint firstItem="1dr-lq-zuC" firstAttribute="top" secondItem="5Qk-Ci-kbK" secondAttribute="top" id="scq-9O-3zA"/>
+                                                <constraint firstItem="5Qk-Ci-kbK" firstAttribute="top" secondItem="hOZ-ql-ha1" secondAttribute="top" id="uMH-cV-o37"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cellImage" destination="5Qk-Ci-kbK" id="v76-Zc-IlG"/>
+                                            <outlet property="dateLabel" destination="8M4-yx-oCE" id="dAj-rJ-Nj6"/>
+                                            <outlet property="likeButton" destination="1dr-lq-zuC" id="tx2-HP-Y3L"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -36,10 +83,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="DZb-PR-Zt0" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="D2r-hW-neG"/>
-                            <constraint firstAttribute="bottom" secondItem="DZb-PR-Zt0" secondAttribute="bottom" id="i30-73-Zo7"/>
-                            <constraint firstAttribute="trailing" secondItem="DZb-PR-Zt0" secondAttribute="trailing" id="p7t-Af-37v"/>
-                            <constraint firstItem="DZb-PR-Zt0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="qRD-hj-hjS"/>
+                            <constraint firstAttribute="bottom" secondItem="DZb-PR-Zt0" secondAttribute="bottom" id="1GY-X3-YBD"/>
+                            <constraint firstItem="DZb-PR-Zt0" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8Sd-ti-2gN"/>
+                            <constraint firstItem="DZb-PR-Zt0" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="TEP-4m-EqK"/>
+                            <constraint firstItem="DZb-PR-Zt0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cqg-fS-Th1"/>
                         </constraints>
                     </view>
                     <connections>
@@ -52,8 +99,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Active" width="44" height="44"/>
         <namedColor name="YP Black">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+        <namedColor name="YP Red">
+            <color red="0.96078431372549022" green="0.41960784313725491" blue="0.42352941176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
